--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <div class="calories-info">
       <div class="left-container">
         <h2 class="bold small-text">Amount per serving</h2>
-        <p>Calories</p>
+        <p><a href="https://en.wikipedia.org/wiki/Calorie" class="nav-link" target="_blank">Calories</a></p>
+        <!--<p>Calories</p> testing anchor/link functionality above-->
       </div>
       <span>230</span>
     </div>
@@ -28,7 +29,7 @@
     <div class="daily-value small-text">
       <p class="bold right no-divider">% Daily Value *</p>
       <div class="divider"></div>
-      <p><span><span class="bold">Total Fat</span> 8g</span> <span class="bold">10%</span></p>
+      <p><span><span class="bold"><a href="https://en.wikipedia.org/wiki/Fat" class="nav-link" target="_blank">Total Fat</a></span> 8g</span> <span class="bold">10%</span></p>
       <p class="indent no-divider">Saturated Fat 1g <span class="bold">5%</span></p>
       <div class="divider"></div>
       <p class="indent no-divider"><span><i>Trans</i> Fat 0g</span></p>
