More Link Changes

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
   <div class="label">
     <header>
-      <h1 class="bold">Nutrition Facts</h1>
+      <h1 class="bold"><a href="https://en.wikipedia.org/wiki/Nutrition_facts_label" class="nav-link" target="_blank">Nutrition Facts</a></h1>
       <div class="divider"></div>
       <p>8 servings per container</p>
-      <p class="bold">Serving size <span>2/3 cup (55g)</span></p>
+      <p class="bold"><a href="https://en.wikipedia.org/wiki/Serving_size" class="nav-link" target="_blank">Serving size</a> <span>2/3 cup (55g)</span></p>
     </header>
     <div class="divider large"></div>
     <div class="calories-info">
@@ -34,7 +34,7 @@
       <div class="divider"></div>
       <p class="indent no-divider"><span><i>Trans</i> Fat 0g</span></p>
       <div class="divider"></div>
-      <p><span><span class="bold">Cholesterol</span> 0mg</span> <span class="bold">0%</span></p>
+      <p><span><span class="bold"><a href="https://en.wikipedia.org/wiki/Cholesterol" class="nav-link" target="_blank">Cholesterol</a></span> 0mg</span> <span class="bold">0%</span></p>
       <p><span><span class="bold">Sodium</span> 160mg</span> <span class="bold">7%</span></p>
       <p><span><span class="bold">Total Carbohydrate</span> 37g</span> <span class="bold">13%</span></p>
       <p class="indent no-divider">Dietary Fiber 4g</p>
