Product Image Test Commit

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <img class="product-img" src="https://a.cdn-hotels.com/gdcs/production0/d1513/35c1c89e-408c-4449-9abe-f109068f40c0.jpg?impolicy=fcrop&w=1600&h=1066&q=medium"/>
   <div class="label">
     <header>
       <h1 class="bold"><a href="https://en.wikipedia.org/wiki/Nutrition_facts_label" class="nav-link" target="_blank">Nutrition Facts</a></h1>
